--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,96 @@
-#tic-tac-toe .disable {text-transform:uppercase; font-size:30px; font-family:Georgia, "Times New Roman", Times, serif}
-#tic-tac-toe #game li {float:left; padding:0; list-style:none; text-align:center; margin-bottom:20px; color:#fff; height:60px; line-height:60px; font-size:40px; color:#ccc}
-#tic-tac-toe #game li.disable{color:#fff}
-#tic-tac-toe #game {float:left; padding:0; clear:both}
-.new_span {width:226px}
-#tic-tac-toe #reset { padding:5px 10px; color:#fff; font-family:Arial, Helvetica, sans-serif; font-size:20px; clear:both; cursor:pointer; float:left; text-align:center; text-transform:uppercase; outline:none; width:204px}
-.input-prepend span.pre_text {width:55px}
-.input-prepend .span1{width:93px}
-.input-prepend {margin-bottom:10px}
-.clr {clear:both; height:0}
-#tic-tac-toe h1 {text-align:center; font-size:28px}
-#tic-tac-toe li::-moz-selection {background:none;color:#000;}
-#tic-tac-toe li::-webkit-selection {background:none;color:#000;}
-#tic-tac-toe {width:220px; margin:0 auto}
-.input-append .win_times {background:#fff; width:101px}
-.input-append .win_text {width:52px}
+#tic-tac-toe .disabled {
+    text-transform: uppercase;
+    font-size: 30px;
+    font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+#tic-tac-toe .disabled:hover {
+    cursor: default;
+}
+
+#tic-tac-toe #game {
+    margin: 20px 20px 0 25px;
+    width: 220px;
+    text-align: center;
+}
+
+#tic-tac-toe #game .tile {
+    padding: 15px 0;
+    clear: both;
+    width: 55px;
+    margin: 5px;
+    font-size: 32px;
+}
+
+#tic-tac-toe #game ul {
+    margin: 0;
+}
+
+#tic-tac-toe #reset {
+    padding: 5px 10px;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    clear: both;
+    cursor: pointer;
+    float: left;
+    text-align: center;
+    text-transform: uppercase;
+    outline: none;
+    width: 204px
+}
+
+#tic-tac-toe h1 {
+    text-align: center;
+    font-size: 28px;
+}
+
+#tic-tac-toe li::-moz-selection {
+    background: none;
+    color: #000;
+}
+
+#tic-tac-toe li::-webkit-selection {
+    background: none;
+    color: #000;
+}
+
+#tic-tac-toe .container {
+    width: 220px;
+    margin: 0 auto;
+}
+
+#tic-tac-toe .board_row {
+    display: flex;
+    margin: 20px 0;
+}
+
+.new_span {
+    width: 226px;
+}
+
+.input-prepend span.pre_text {
+    width: 55px;
+}
+
+.input-prepend .span1 {
+    width: 93px;
+}
+
+.input-prepend {
+    margin-bottom: 10px;
+}
+
+.clr {
+    clear: both;
+    height: 0;
+}
+
+.input-append .win_times {
+    background: #fff;
+    width: 101px;
+}
+
+.input-append .win_text {
+    width: 52px;
+}
